chore: update the app configuration

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -12,24 +12,24 @@ penaltyAmount.UndergraduateStudent=120
 penaltyAmount.Staff=80
 penaltyAmount.Professor=70
 
-# Deadline of borrowing book in days
+# Deadline of borrowing book (days)
 borrowDeadline.BorrowableBook.GraduateStudent=17
 borrowDeadline.BorrowableBook.UndergraduateStudent=14
 borrowDeadline.BorrowableBook.Staff=10
 borrowDeadline.BorrowableBook.Professor=20
 
-# Deadline of borrowing thesis in days
+# Deadline of borrowing thesis (days)
 borrowDeadline.Thesis.GraduateStudent=30
 borrowDeadline.Thesis.UndergraduateStudent=7
 borrowDeadline.Thesis.Staff=10
 borrowDeadline.Thesis.Professor=30
 
-# Limit of borrow in days
-borrowCountLimit.GraduateStudent=1
-borrowCountLimit.UndergraduateStudent=1
-borrowCountLimit.Staff=1
-borrowCountLimit.Professor=1
+# Limit of borrow (days)
+borrowCountLimit.GraduateStudent=15
+borrowCountLimit.UndergraduateStudent=10
+borrowCountLimit.Staff=12
+borrowCountLimit.Professor=10
 
-# In minutes
+# (minutes)
 bookReadingTime.min=30
 bookReadingTime.max=150
